--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ github_username:  Arkenan
 
 # Build settings
 markdown: kramdown
-theme: minima
+theme: jekyll-theme-midnight
 gems:
   - jekyll-feed
 exclude:
